--- a/Nginx/www/config/packages/security.yaml
+++ b/Nginx/www/config/packages/security.yaml
@@ -1,5 +1,4 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory: { memory: ~ }
     firewalls:
@@ -7,7 +6,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
 
             # activate different ways to authenticate
 
