(sys) setup docker-network (symf)(react) setup CORS

--- a/Nginx/core/nginx.conf
+++ b/Nginx/core/nginx.conf
@@ -7,9 +7,13 @@ server {
     access_log /var/log/nginx/access.log;
     root $MAGE_ROOT;
 
-
+    if (!-e $request_filename) {
+        rewrite ^.*$ /index.php last;
+    }
+    
 location ~* \.php$ {
-    try_files $uri $uri/ /index.php last;
+    
+    #try_files $uri $uri/ /index.php last;
     fastcgi_split_path_info  (.+?\.php)(/.*)$;
     fastcgi_pass php:9000;
     fastcgi_index index.php;
