--- a/Nginx/www/.env
+++ b/Nginx/www/.env
@@ -24,7 +24,7 @@ APP_SECRET=83e6c1bda1a7e1dfab479def4177a600
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://temp:temp@127.0.0.1:3306/temp
+DATABASE_URL=mysql://temp:temp@mysql:3306/temp
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
@@ -33,3 +33,7 @@ DATABASE_URL=mysql://temp:temp@127.0.0.1:3306/temp
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
