(symfony) add & setup AWC S3 storage

--- a/Nginx/www/config/routes.yaml
+++ b/Nginx/www/config/routes.yaml
@@ -21,3 +21,8 @@ test:
   path:     /test
   methods:    [POST]
   controller: 'App\Controller\HomeController::testAction'
+
+picture:
+  path:     /picture
+  methods:    [GET]
+  controller: 'App\Controller\PictureController::getPictureAction'
