--- a/Nginx/www/config/routes.yaml
+++ b/Nginx/www/config/routes.yaml
@@ -24,5 +24,5 @@ test:
 
 picture:
   path:     /picture
-  methods:    [GET]
-  controller: 'App\Controller\PictureController::getPictureAction'
+  methods:    [POST, PUT, GET, DELETE]
+  controller: 'App\Controller\PictureController::PictureAction'
