--- a/Nginx/www/.env
+++ b/Nginx/www/.env
@@ -26,6 +26,8 @@ APP_SECRET=83e6c1bda1a7e1dfab479def4177a600
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 
 DATABASE_URL=mysql://temp:temp@mysql:3306/temp
+S3_URL=http://s3server:8000
+#S3_URL=http://localhost:8000
 #DATABASE_URL=mysql://temp:temp@127.0.0.1:3306/temp
 
 ###< doctrine/doctrine-bundle ###
