(symfony) route for one pic (react) get one pic (sys) upload file limit up

--- a/Nginx/core/nginx.conf
+++ b/Nginx/core/nginx.conf
@@ -6,6 +6,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root $MAGE_ROOT;
+    client_max_body_size 21m;
 
     if (!-e $request_filename) {
         rewrite ^.*$ /index.php last;
