--- a/Nginx/core/react.conf
+++ b/Nginx/core/react.conf
@@ -6,4 +6,5 @@ server {
     error_log  /var/log/nginx/react_error.log;
     access_log /var/log/nginx/react_access.log;
     root $MAGE_ROOT;
+    client_max_body_size 21m;
 }
