--- a/PHP/php.ini
+++ b/PHP/php.ini
@@ -7,3 +7,5 @@ flag session.auto_start = off
 zlib.output_compression = on
 suhosin.session.cryptua = off
 display_errors = Off
+upload_max_filesize = 20M
+post_max_size = 21M
