--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
         restart: always
         volumes:
             - ./Nginx/www:/var/www
+            - ./PHP/php.ini:/usr/local/etc/php/conf.d/php.ini
 
         links:
             - mysql
