--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,7 +12,7 @@
     "react-redux": "^6.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "serve": "^10.1.2"
   },
