--- a/Nginx/www/config/packages/nelmio_cors.yaml
+++ b/Nginx/www/config/packages/nelmio_cors.yaml
@@ -3,7 +3,7 @@ nelmio_cors:
         origin_regex: true
         allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Access', 'Refresh', 'Login', 'Password', 'Email']
+        allow_headers: ['Content-Type', 'Access', 'Refresh', 'Login', 'Password', 'Email', 'S3Link']
         expose_headers: []
         max_age: 3600
     paths:
