--- a/Nginx/www/.env
+++ b/Nginx/www/.env
@@ -36,8 +36,11 @@ S3_URL=http://s3server:8000
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+# MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+OAUTH_FACEBOOK_ID=fb_id
+OAUTH_FACEBOOK_SECRET=fb_secret
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
