--- a/Nginx/www/config/routes.yaml
+++ b/Nginx/www/config/routes.yaml
@@ -36,3 +36,8 @@ pictureOne:
   path:     /picture/{bucket}/{s3link}
   methods:    [POST, PUT, GET, DELETE]
   controller: 'App\Controller\PictureController::PictureOneAction'
+
+googleCallBack:
+  path:     /google/callback
+  methods:    [GET]
+  controller: 'App\Controller\GoogleController::callBackAction'
