--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,13 @@ services:
         ports:
             - "3001:3001"
             - "3002:3002"
+
             - "443:443"
         volumes:
             - ./Nginx/core:/etc/nginx/conf.d
             - ./Nginx/www:/var/www/
             - ./Nginx/www2:/var/www2/
+            - ./Nginx/www3:/var/www3/
             - ./Nginx/Logs:/var/log/nginx/
             - ./Nginx/html:/usr/share/nginx/html/
         links:
@@ -71,7 +73,7 @@ services:
        volumes:
           - ./S3/s3data:/usr/src/app/localData
           - ./S3/s3metadata:/usr/src/app/localMetadata
-          - "${PWD}/s3.json:/usr/src/app/config.json"
+          #- "${PWD}/s3.json:/usr/src/app/config.json"
        environment:
           - SCALITY_ACCESS_KEY_ID=111
           - SCALITY_SECRET_ACCESS_KEY=111
@@ -79,6 +81,21 @@ services:
        networks:
           - webappnetwork      
             
+    adonis:
+        build: ./adonis
+        environment:
+           - NODE_ENV=production
+        links:
+           - nginx
+        volumes:
+           - ./adonis:/adonis
+        command: npm start
+        ports:
+           - 3333:3333
+        networks:
+            - webappnetwork
+
+
 networks:
    webappnetwork:
       driver: bridge
