--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
        volumes:
           - ./S3/s3data:/usr/src/app/localData
           - ./S3/s3metadata:/usr/src/app/localMetadata
-          #- "${PWD}/s3.json:/usr/src/app/config.json"
+          - "${PWD}/s3.json:/usr/src/app/config.json"
        environment:
           - SCALITY_ACCESS_KEY_ID=111
           - SCALITY_SECRET_ACCESS_KEY=111
@@ -80,6 +80,21 @@ services:
        networks:
           - webappnetwork      
             
+    adonis:
+        build: ./adonis
+        environment:
+           - NODE_ENV=production
+        links:
+           - nginx
+        volumes:
+           - ./adonis:/app
+        command: npm start
+        ports:
+           - 3333:3333
+        networks:
+            - webappnetwork
+
+
 networks:
    webappnetwork:
       driver: bridge
